# datman

./: .all-contributorsrc  .buildinfo  .codacy.yml  .gitattributes  .gitignore  .mailmap  .noseids  .pep8speaks.yml  .zenodo.json  CHANGELOG.md  CHANGES.rst  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.html  README.md  README.rst  api.html  changes.html  contributing.html  datman_conf.html  datman_files.html  environment.yml  genindex.html  get_version.py  index.html  installation.html  links.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  script_overview.html  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  usage.html  (+1 more)
.circleci/: config.yml
.doctrees/: README.doctree  api.doctree  changes.doctree  contributing.doctree  datman_conf.doctree  datman_files.doctree  environment.pickle  index.doctree  installation.doctree  links.doctree  script_overview.doctree  usage.doctree
.doctrees/api/: datman.config.doctree  datman.dashboard.doctree  datman.doctree  datman.exceptions.doctree  datman.exporters.doctree  datman.fs_log_scraper.doctree  datman.header_checks.doctree  datman.metrics.doctree  datman.scan.doctree  datman.scan_list.doctree  datman.scanid.doctree  datman.utils.doctree  datman.xnat.doctree
.github/: CODEOWNERS  auto_assign.yml  changelog.json  config.yml  labeler.yml
.github/comment_pr_title/: action.yml
.github/scripts/: update_zenodo.py
.github/setup_datman/: action.yml
.github/update_changelog/: action.yml
.github/update_zenodo/: action.yml
.github/workflows/: assign-reviewers.yml  label-pr.yml  publish-release.yml  report-tests.yml  run-tests.yml  update-docs.yml
.maintenance/: update_changes.sh  update_zenodo.py
_sources/: contributing.rst.txt  datman_conf.rst.txt  datman_files.rst.txt  installation.rst.txt  usage.rst.txt
_sources/api/: datman.config.rst.txt  datman.exporters.rst.txt  datman.metrics.rst.txt  datman.rst.txt  datman.scan_list.rst.txt  datman.scanid.rst.txt
_static/: documentation_options.js
api/: datman.config.html  datman.dashboard.html  datman.exceptions.html  datman.exporters.html  datman.fs_log_scraper.html  datman.header_checks.html  datman.html  datman.metrics.html  datman.scan.html  datman.scan_list.html  datman.scanid.html  datman.utils.html  datman.xnat.html
assets/: 141212-basic-task-6fwhm.sh  150409-compcor-nonlin-8fwhm.sh  151012-tedmethod-compcor-lowpass-nonlin-10fwhm.sh  160525-tedmethod-compcor-lowpass-nonlin-10fwhm.sh  160525-tedmethod-compcor-nonlin-10fwhm.sh  999999-test.sh  EA-timing.csv  EA-vid-lengths.csv  ENGIMA_ExtractSubcortical.sh  ENIGMA_ExtractCortical.sh  IM-timing.csv  IM_event-times_AN.1D  IM_event-times_FE.1D  IM_event-times_FX.1D  IM_event-times_HA.1D  IM_event-times_NE.1D  IM_event-times_SA.1D  OB-timing.csv  OB_event-times_AN.1D  OB_event-times_FE.1D  OB_event-times_FX.1D  OB_event-times_HA.1D  OB_event-times_NE.1D  OB_event-times_SA.1D  bids_requirements.yaml  blacklist-rm.sh  compute_fbirn.m  config.yaml  data_flow.dia  dm-xnat-upload.sh  dti-distcorr.sh  dti-qc.md  dtifit.sh  gbss_single_shell.sh  gems-dicom-dict.txt  gng_event-times.csv  imob-parse.py  mrqc.json  papaya.js  qbatchsub.sh  (+12 more)
assets/bids/: requirements.yaml
assets/bids_jsons/: fmriprep_json.json  fmriprep_json_fields.json  fmriprep_json_scc.json  mriqc_json.json  mriqc_json_scc.json
assets/config_templates/: docker_main_config.yml  main_config.yml  study_config.yml
assets/dm_bids_app_config/: mriqc_local.json  mriqc_scc.json
assets/dti-qc/: AdjDiffMasksall.m  DTIQA_Handout_moj_SGEversion.m  README  checkradpixsh.m  cleanmask.m  dti-qc.m  findSPINS_QAsenums.m  loadMPRC.m  load_MosaicDWI_allSites.m  load_singleDWI_SPINS.m  load_singleDWI_allSites.m  noise_calcs_centreSliceDiff_1B0.m  noise_calcs_diff_avg_3centreSliceDiff_3B0s.m  noisedistNyqSmask.m  noisedist_DTISmask.m  processSPINS.m  to_run.m
assets/dti-qc-sofia/: AdjDiffMasksallv2clean.m  DTIQA_Handout_Joe.m  DTIQA_Handout_Joe.m~  README  findSPINS_QAsenumsv2.m  loadMPRC.m  load_singleDWI_NY.m  load_singleDWI_SPINS.m  makecirc.m  noisedistNyqSmask.m  noisedist_DTISmask.m  processSPINS.m  renameDCM_standardExSeIm.m
assets/epitome/: master_150331-spins.sh  master_151012-spins.sh
assets/ge-tags/: ForJoe.xls  gems-dicom-dict-DV24.txt
assets/imgs/: pipeline_dti.dia
assets/ninet/: LICENSE  README.md
assets/qascripts_version2/: README.txt  qa_bold_v2.sh  qa_clipcount_v2.sh  qa_dti_v2.sh  qa_motion_v2.sh  qa_pcasl_v2.sh  qa_preamble.sh  qa_tsnr_v2.sh
datman/: __about__.py  __init__.py  _version.py  ana.py  checklist.py  config.py  dashboard.py  exceptions.py  exporters.py  fs_log_scraper.py  generate_scanslist.py  header_checks.py  importers.py  metrics.py  module.py  proc.py  project_config.py  scan.py  scan_list.py  scanid.py  siteconfig.py  utils.py  xnat.py  yamltools.py
datman/bids/: bidsify.py  check_bids.py  transfer_feenics_motion.py
datman/exporters/: __init__.py  base.py  bids.py  bids_legacy.py  dashboard.py  legacy.py  nii_symlink.py
datman/spins/: __init__.py  (+1 more)
docs/: Makefile  README.rst  api.rst  changes.rst  conf.py  contributing.rst  datman_conf.rst  datman_files.rst  index.rst  installation.rst  requirements.txt  script_overview.rst  xnat-upload-quickstart.tex
master/: .buildinfo  api.html  changes.html  genindex.html  index.html  installation.html  links.html  py-modindex.html  search.html  searchindex.js  usage.html
tests/: README  test_bidsify.py  test_checklist.py  test_config.py  test_datman_exporters.py  test_datman_scanid.py  test_dm-check-bvecs.py  test_dm-check-headers.py  test_dm-link-project-scans.py  test_dm-proc-freesurfer.py  test_dm-qc-report.py  test_dm2-xnat-upload.py  test_dm_bids_app.py  test_dm_blacklist_rm.py  test_dm_link_project_scans.py  test_dm_link_shared_ids.py  test_dm_proc_freesurfer.py  test_dm_proc_maget_brain.py  test_dm_qc_report.py  test_dm_redcap_scan_completed.py  test_dm_xnat_upload.py  test_fs_log_scraper.py  test_header_checks.py  test_metrics.py  test_proc.py  test_project_config.py  test_scan.py  test_siteconfig.py  test_utils.py  test_xnat.py
(+418 files in other folders)
