[metadata]
url = https://github.com/tigrlab/datman
author = The TIGRLab
author_email = dawn.smith@camh.ca
maintainer = Dawn Smith
maintainer_email = dawn.smith@camh.ca
description = datman is a.
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = Apache License, Version 2.0
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.6
install_requires =
    docopt ~= 0.6.2
    future ~= 0.13.1
    mock ~= 1.0.1
    nose ~= 1.3.4
    Pillow
    pyxnat ~= 1.0.0.0
    requests >= 2.20.0
    SQLAlchemy >= 1.3.0
    pydicom ~= 1.1.0
    matplotlib ~= 1.4.2
    nibabel ~= 2.0.0
    numpy ~= 1.12.1
    pandas ~= 0.15.2
    scipy ~= 0.18.1
    PyYAML
    pybids ~= 0.9.5

test_requires =
    codecov
    coverage
    pytest
packages = find:
include_package_data = True

[options.exclude_package_data]
* = tests

[options.extras_require]
doc =
    nbsphinx
    packaging
    pydot >= 1.2.3
    pydotplus
    sphinx >= 2.1.2
    sphinx-argparse
    sphinx_rtd_theme
    sphinxcontrib-apidoc ~= 0.3.0
    sphinxcontrib-napoleon
    sphinxcontrib-versioning
docs =
    %(doc)s
duecredit = duecredit
resmon = psutil >=5.4
style =
    flake8 >= 3.7.0
test =
    pytest >= 4.4
    pytest-xdist >= 1.28
    pytest-cov
    coverage
tests =
    %(test)s
all =
    %(doc)s
    %(duecredit)s
    %(resmon)s
    %(tests)s

[options.package_data]
datman =
    VERSION

[versioneer]
VCS = git
style = pep440
versionfile_source = datman/_version.py
versionfile_build = datman/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
doctests = False
exclude=
    *build/
    docs/
select = C,E,F,W,B,B950
ignore = N802,N806,W504,E203
putty-ignore =
    */__init__.py : +F401
    docs/conf.py : +E265
    /^\s*\.\. _.*?: http/ : +E501

[tool:pytest]
norecursedirs = .* _*
addopts = -vx --doctest-modules
doctest_optionflags = ALLOW_UNICODE NORMALIZE_WHITESPACE
env =
    PYTHONHASHSEED=0
filterwarnings =
    ignore::DeprecationWarning
