[metadata]
url = https://github.com/tigrlab/datman
author = The TIGRLab
author_email = tigrlabcamh@gmail.com
maintainer = Dawn Smith
maintainer_email = tigrlabcamh@gmail.com
description = datman is a set of scripts for managing MRI data in XNAT, metadata in REDCap and performing visual quality control.
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = Apache License, Version 2.0
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.6
install_requires =
    docopt ~= 0.6.2
    matplotlib ~= 3.1.2
    nibabel ~= 3.0.0
    numpy ~= 1.18.0
    pandas ~= 0.25.3
    pybids ~= 0.10.0
    pydicom ~= 1.3.0
    pysftp ~= 0.2.9
    pyxnat ~= 1.2.1.0.post3
    pyyaml ~= 5.2
    requests ~= 2.22.0
    urllib3 ~= 1.25.7
    wrapt ~= 1.11.2

test_requires =
    codecov
    coverage
    mock
    pytest
packages = find:
include_package_data = True


[options.exclude_package_data]
* = tests

[options.extras_require]
doc =
    nbsphinx
    packaging
    pydot >= 1.2.3
    pydotplus
    sphinx >= 2.1.2
    sphinx_rtd_theme
    sphinxcontrib-apidoc ~= 0.3.0
    sphinxcontrib-napoleon
    sphinxcontrib-versioning
docs =
    %(doc)s
duecredit = duecredit
resmon = psutil >=5.4
style =
    flake8 >= 3.7.0
test =
    pytest >= 4.4
    pytest-xdist >= 1.28
    pytest-cov
    mock
    coverage
tests =
    %(test)s
all =
    %(doc)s
    %(duecredit)s
    %(resmon)s
    %(tests)s

[options.package_data]
datman =
    VERSION

[versioneer]
VCS = git
style = pep440
versionfile_source = datman/_version.py
versionfile_build = datman/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 80
doctests = False
exclude=
    *build/
    docs/
select = C,E,F,W,B,B950
ignore = N802,N806,W503,W504,E203
putty-ignore =
    */__init__.py : +F401
    docs/conf.py : +E265
    /^\s*\.\. _.*?: http/ : +E501

[isort]
line_length = 80
indent='    '
multi_line_output=6

[tool:pytest]
norecursedirs = .* _*
addopts = -vx --doctest-modules
doctest_optionflags = ALLOW_UNICODE NORMALIZE_WHITESPACE
env =
    PYTHONHASHSEED=0
filterwarnings =
    ignore::DeprecationWarning
junit_family = xunit2
python_files="tests/*.py"
